--- a/core-demo/pom.xml
+++ b/core-demo/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.richfaces.examples</groupId>
         <artifactId>richfaces-example-parent</artifactId>
-        <version>4.3.9-SNAPSHOT</version>
+        <version>4.3.9.ayg</version>
         <relativePath>../parent/pom.xml</relativePath>
     </parent>
     
