--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <groupId>org.richfaces.examples</groupId>
     <artifactId>examples-aggregator</artifactId>
-    <version>4.3.9-SNAPSHOT</version>
+    <version>4.3.9.ayg</version>
     <packaging>pom</packaging>
     <name>RichFaces Examples Aggregator</name>
 
